examples/errors/redefinition/E0302_redefined_struct.hd
struct Point {
    x: int,
    y: int
}

struct Point {
    a: int,
    b: int
}

fn main(): void {
    return;
}
